# CCConfigManager

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  app.py  ccconfigmanager.spec  dev.bat  kill_port.py  mcp_tools.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  scanner.py  setup.bat  setup.sh  start.bat  start.sh  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  DATA-MODEL.md  IMPLEMENTATION-PLAN.md  PRD.md  README.md  UI-SPEC.md
src/: api.ts  main.ts  state.ts  types.ts  utils.ts
src/__tests__/: api.test.ts  state.test.ts  utils.test.ts
src/ccconfigmanager/: app.py  mcp_tools.py  mover.py  packs.py  projects.py  registry.py  scanner.py  source_detector.py
src/ccconfigmanager/executor/: __init__.py  agent_runner.py  engine.py  gate.py  hooks.py  mcp_client.py  permissions.py  produces.py  run_store.py  sandbox.py  tools.py  workflow_loader.py
src/ccconfigmanager/routes/: agents.py  items.py  packs.py  proj.py  runs.py  workflows.py
src/ccconfigmanager/static/: index.html
src/css/: main.css  workflow.css
src/ui/: items.ts  packs.ts  projects.ts  sidebar.ts
src/workflow/: engine.ts  integration.ts  interaction.ts  properties.ts  renderer.ts  run_panel.ts
tests/: __init__.py  conftest.py  test_api_items.py  test_api_projects.py  test_executor_tools.py  test_gate.py  test_workflow_loader.py
